# pyprotect

./: .gitignore  CMakeLists.txt  LICENSE  README.md  aes.cpp  config.h  encrypt.py  pyprotect.cpp
test/: test_loader.py
test/app/: app.py  exclude.py  foo.py
